# wikibase-rest-api-client

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-check.yml
hooks/: pre-commit
tests/: conftest.py  test_client.py  test_fluent.py  test_rw_client.py  test_rw_client_statements.py  utils.py
wikibase_rest_api_client/: __init__.py  client.py  types.py
wikibase_rest_api_client/api/aliases/: add_item_aliases_in_language.py  add_property_aliases_in_language.py  get_item_aliases.py  get_item_aliases_in_language.py  get_property_aliases.py  get_property_aliases_in_language.py  patch_item_aliases.py  patch_property_aliases.py
wikibase_rest_api_client/models/: __init__.py  aliases.py  aliases_add_request.py  aliases_patch_request.py  description_replace_request.py  descriptions.py  descriptions_patch_request.py  error.py  get_item_fields_item.py  get_property_fields_item.py  item.py  item_aliases.py  item_descriptions.py  item_labels.py  item_sitelinks.py  item_statements.py  label_replace_request.py  labels.py  labels_patch_request.py  language_value.py  mediawiki_edit.py  patch_document.py  patch_document_patch_item.py  patch_document_patch_item_op.py  property_.py  property_aliases.py  property_descriptions.py  property_info.py  property_labels.py  property_statements.py  qualifier.py  qualifier_property.py  qualifier_value.py  qualifier_value_type.py  reference.py  search_item_result.py  search_item_results.py  search_match.py  sitelink.py  sitelink_patch_request.py  (+8 more)
wikibase_rest_api_client/utilities/: fluent.py
(+45 files in other folders)
