[tool.poetry]
name = "wikibase-rest-api-client"
version = "0.2.2"
description = "A client library for accessing the Wikibase REST API"

authors = ["Daniel Erenrich <daniel@erenrich.net>"]
license = "MIT"

readme = "README.md"
packages = [{ include = "wikibase_rest_api_client" }]
include = ["CHANGELOG.md", "wikibase_rest_api_client/py.typed"]

classifiers = ["Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Wiki"]
keywords = ["wikibase", "wikidata", "rest-api", "client"]

[tool.poetry.urls]
Homepage = "https://github.com/derenrich/wikibase-rest-api-client"
Repository = "https://github.com/derenrich/wikibase-rest-api-client.git"
Issues = "https://github.com/derenrich/wikibase-rest-api-client/issues"


[tool.poetry.dependencies]
python = "^3.8"
httpx = ">=0.20.0,<0.28.0"
attrs = ">=21.3.0"
python-dateutil = "^2.8.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"
pytest = "^7.4.4"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = ["F", "I"]
line-length = 120

[tool.mypy]
exclude = ["tests"]
